istio/server-destination-rule-mirror.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: server
spec:
  host: server.mirror-traffic.svc.cluster.local
  subsets:
  - name:  v1
    labels:
      version: "v1.0.0"
  - name: mirror
    labels:
      version: mirror
