istio/server-vs-mesh-mirror.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: server-virtualservice-mesh
  namespace: mirror-traffic
spec:
  gateways:
  - mesh
  hosts:
  - server.mirror-traffic.svc.cluster.local
  http:
  - route:
    - destination:
        host: server.mirror-traffic.svc.cluster.local
        port:
          number: 8080
        subset: v1
      weight: 100
    mirror:
      host: server.mirror-traffic.svc.cluster.local
      port:
        number: 8080
      subset: mirror
    mirrorPercentage:
      value: 100.0
